--- a/src/sass/pad.sass
+++ b/src/sass/pad.sass
@@ -27,7 +27,7 @@
       box-shadow: none
       margin-top: 0
       padding-top: 0
-      min-width: 200px
+      min-width: 264px
       margin-right: -55px
 
   @media (max-width: $screen-sm-max)
